[gd_scene load_steps=8 format=4 uid="uid://b6xl2wx33eu52"]

[ext_resource type="Script" uid="uid://nbcdlj0eijd1" path="res://Game/level_builder.gd" id="1_db6l3"]
[ext_resource type="TileSet" uid="uid://dqltvs87wbfs5" path="res://Game/mainground_tileset.tres" id="2_oxiqo"]
[ext_resource type="TileSet" uid="uid://bpnly4l6tgk65" path="res://Game/background_tileset.tres" id="3_1fiyq"]
[ext_resource type="Texture2D" uid="uid://cf5hfmw16sove" path="res://assets/editor/ValidLevelZone.png" id="4_lhs3f"]
[ext_resource type="Texture2D" uid="uid://b3f0ymvctvkqj" path="res://assets/editor/LevelWidthDivider.png" id="5_oc4ut"]
[ext_resource type="Texture2D" uid="uid://b8tec46w0offr" path="res://assets/editor/Entrance.png" id="7_1fiyq"]
[ext_resource type="Texture2D" uid="uid://cud6v3onga3k0" path="res://assets/editor/Exit.png" id="7_tpc4y"]

[node name="LevelBuilder" type="Node2D"]
script = ExtResource("1_db6l3")
entrances = Array[bool]([true])
exits = Array[bool]([true])

[node name="Background" type="TileMapLayer" parent="."]
tile_set = ExtResource("3_1fiyq")

[node name="Mainground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAGAAYAAAAAAAEAAAAGAAYAAAAAAAIAAAAGAAYAAAAAAAMAAAAGAAYAAAAAAAQAAAAGAAYAAAAAAAUAAAAGAAYAAAAAAAYAAAAGAAYAAAAAAAcAAAAGAAYAAAAAAAgAAAAGAAYAAAAAAAkAAAAGAAYAAAAAAAwAAAAGAAcAAAAAAAsAAAAGAAYAAAAAAAoAAAAGAAYAAAANAAwAAAAGAAcAAAANAAsAAAAGAAYAAAANAAoAAAAGAAYAAAANAAkAAAAGAAYAAAANAAgAAAAGAAYAAAANAAcAAAAGAAYAAAANAAYAAAAGAAYAAAANAAUAAAAGAAYAAAANAAQAAAAGAAYAAAANAAMAAAAGAAYAAAANAAIAAAAGAAYAAAANAAAAAAAGAAYAAAANAAEAAAAGAAYAAAADAAMAAAAGAAcAAAAEAAIAAAAGAAcAAAAFAAEAAAAGAAYAAAAFAAIAAAAGAAYAAAAFAAMAAAAGAAYAAAAFAAQAAAAGAAYAAAAFAAUAAAAGAAYAAAAFAAYAAAAGAAYAAAAFAAcAAAAGAAcAAAA=")
tile_set = ExtResource("2_oxiqo")

[node name="Display" type="Node2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="ValidZone" type="NinePatchRect" parent="Display"]
z_index = -100
offset_right = 224.0
offset_bottom = 208.0
texture = ExtResource("4_lhs3f")
region_rect = Rect2(0, 0, 30, 30)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
metadata/_edit_lock_ = true

[node name="LevelWidthDivider" type="Line2D" parent="Display"]
visible = false
texture_repeat = 2
points = PackedVector2Array(224, -50, 224, 354)
width = 5.0
texture = ExtResource("5_oc4ut")
metadata/_edit_lock_ = true

[node name="ExitArrow" type="Sprite2D" parent="Display"]
visible = false
position = Vector2(112, 0)
texture = ExtResource("7_tpc4y")

[node name="EntranceArrow" type="Sprite2D" parent="Display"]
visible = false
position = Vector2(112, 208)
texture = ExtResource("7_1fiyq")
